test/files/neg/t9675.check
t9675.scala:5: warning: comparing values of types Test.A and String using `!=` will always yield true
  val func1 = (x: A) => { x != "x" }
                            ^
t9675.scala:7: warning: comparing values of types Test.A and String using `!=` will always yield true
  val func2  = (x: A) => { x != "x" }: Boolean
                             ^
t9675.scala:9: warning: comparing values of types Test.A and String using `!=` will always yield true
  val func3: Function1[A, Boolean] = (x) => { x != "x" }
                                                ^
t9675.scala:12: warning: comparing values of types Test.A and String using `!=` will always yield true
    def apply(x: A): Boolean = { x != "x" }
                                   ^
t9675.scala:15: warning: comparing values of types Test.A and String using `!=` will always yield true
  def method(x: A): Boolean = { x != "x" }
                                  ^
t9675.scala:19: warning: comparing values of types Test.A and String using `!=` will always yield true
    A("x") != "x"
           ^
t9675.scala:21: warning: comparing values of types Test.A and String using `!=` will always yield true
    val func5: Function1[A, Boolean] = (x) => { x != "x" }
                                                  ^
t9675.scala:23: warning: comparing values of types Test.A and String using `!=` will always yield true
    List(A("x")).foreach((item: A) => item != "x")
                                           ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
